Bug 328296 - When i select and resize using squares, i get black squares.
Summary: When i select and resize using squares, i get black squares.
Status: RESOLVED FIXED
Alias: None
Product: kolourpaint
Classification: Applications
Component: general (show other bugs)
Version: 4.11.2
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: kolourpaint-support
URL: http://youtu.be/dJ1ifP_QEtk
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-01 17:47 UTC by Billy Hope
Modified: 2013-12-03 07:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In: 4.11.5


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Billy Hope 2013-12-01 17:47:17 UTC
When i select and resize using squares, i get black squares.

Reproducible: Always

Steps to Reproduce:
1. Use select or text tool.
2. Resize using the square at the bottom-right.
3. I get black squares!
Actual Results:  
I get black squares.

Expected Results:  
Not shown the squares.

Im using Ubuntu 13.10. Im running off external HDD.
Comment 1 Martin Koller 2013-12-01 19:41:18 UTC
Thanks for the Video.
I can confirm the problem.
Comment 2 Martin Koller 2013-12-01 21:30:51 UTC
Git commit 4b7987c650ea6625b66f36944c3a4377398b5bb0 by Martin Koller.
Committed on 01/12/2013 at 21:26.
Pushed by mkoller into branch 'KDE/4.11'.

Fix redraw artefacts when resizing selection area
FIXED-IN: 4.12

M  +6    -6    views/kpView_Selections.cpp

http://commits.kde.org/kolourpaint/4b7987c650ea6625b66f36944c3a4377398b5bb0
Comment 3 Martin Koller 2013-12-01 21:31:09 UTC
Git commit fc6b875585af5ae8f42cb3c8535a43e549730536 by Martin Koller.
Committed on 01/12/2013 at 21:26.
Pushed by mkoller into branch 'KDE/4.12'.

Fix redraw artefacts when resizing selection area
FIXED-IN: 4.12

M  +6    -6    views/kpView_Selections.cpp

http://commits.kde.org/kolourpaint/fc6b875585af5ae8f42cb3c8535a43e549730536
Comment 4 Billy Hope 2013-12-02 16:15:12 UTC
How do i update
Comment 5 Billy Hope 2013-12-02 16:15:38 UTC
sorry im a newbie with linux.
Comment 6 Martin Koller 2013-12-03 07:30:14 UTC
I assume that your Ubuntu distribution will release updated packages when the next version (KDE 4.11.5 or 4.12 ) is released.
As I do not use Ubuntu, I can't tell for sure. Better ask on an Ubuntu Users Forum.