Fix redraw artefacts when resizing selection area

BUG: 328296
FIXED-IN: 4.12